fix: GA-3533 Alert badge icon is not visible (#323)

--- a/app/assets/stylesheets/glownet/_notifications.scss
+++ b/app/assets/stylesheets/glownet/_notifications.scss
@@ -114,4 +114,8 @@
   &--notice {
     button { color: $green; }
   }
+
+  .alert-badge {
+    overflow: visible
+  }
 }
